change package Name

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -83,6 +83,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/UpgradeAccount"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0.5"
