--- a/app/src/main/res/layout/msg_list_item.xml
+++ b/app/src/main/res/layout/msg_list_item.xml
@@ -1,101 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/_120sdp"
-    android:layoutDirection="rtl"
     android:id="@+id/layout"
-    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/_80sdp"
     android:background="@drawable/shadow_back"
+    android:layoutDirection="rtl"
+    android:orientation="horizontal"
     android:padding="5dp">
 
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.6"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="10">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.4"
+            android:layout_height="0dp"
+            android:layout_weight="4"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txt_title"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:fontFamily="@fonts/iran_san"
+                android:fontFamily="@font/iran_sani"
                 android:gravity="right|center"
                 android:paddingRight="5dp"
                 android:text="" />
+
             <TextView
                 android:id="@+id/msgNew"
                 android:layout_width="@dimen/_10sdp"
                 android:layout_height="@dimen/_10sdp"
-                android:paddingRight="@dimen/_10sdp"
-                android:background="@drawable/circle_drawable"/>
+                android:background="@drawable/circle_drawable"
+                android:paddingRight="@dimen/_10sdp" />
 
 
             <TextView
                 android:id="@+id/txt_date"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="7"
-                android:fontFamily="@fonts/iran_san"
+                android:layout_weight="3"
+                android:fontFamily="@font/iran_sani"
                 android:gravity="left|center"
                 android:paddingRight="5dp"
                 android:text="" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/txt_body"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_weight="0.3"
-            android:textAlignment="center"
-            android:layout_gravity="center"
-            android:fontFamily="@fonts/iran_san"
-            android:gravity="right"
-            android:paddingRight="5dp"
-            android:textColor="#161111" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.4"
-            android:gravity="center"
-            android:layout_marginBottom="10sp"
-            android:orientation="horizontal">
+            android:layout_height="0dp"
+            android:layout_weight="6"
+            android:orientation="horizontal"
+            android:weightSum="10">
 
-            <Button
-                android:id="@+id/btn_ok"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_weight="0"
-                android:layout_marginRight="@dimen/_20sdp"
-                android:textColor="@color/colorWhite"
-                android:background="@drawable/button_background"
-                android:text="پذیرش"  />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="6"
+                >
 
-            <Button
-                android:id="@+id/btn_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_weight="0"
-                android:layout_marginLeft="@dimen/_20sdp"
-                android:layout_marginRight="@dimen/_20sdp"
-                android:textColor="@color/colorWhite"
-                android:background="@drawable/button_background_gray"
-                android:text="عدم پذیرش"  />
+                <TextView
+                    android:id="@+id/txt_body"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/iran_sani"
+                    android:paddingRight="5dp"
+                    android:textColor="@color/colorText"
+                    android:textSize="@dimen/_8sdp" />
+
+            </LinearLayout>
 
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_gravity="center"
+                android:layout_weight="4"
+                android:gravity="center"
+                android:orientation="horizontal">
 
+                <Button
+                    android:id="@+id/btn_ok"
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:background="@drawable/button_background"
+                    android:fontFamily="@font/iran_sani"
+                    android:textSize="@dimen/_8sdp"
+                    android:textColor="@color/colorWhite"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btn_cancel"
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_marginRight="@dimen/_5sdp"
+                    android:background="@drawable/button_background_gray"
+                    android:fontFamily="@font/iran_sani"
+                    android:textSize="@dimen/_8sdp"
+                    android:textColor="@color/colorWhite"
+                    android:visibility="gone" />
+
+
+            </LinearLayout>
 
         </LinearLayout>
-
 
 
     </LinearLayout>
