--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_height="@dimen/_100sdp"
             android:layout_gravity="center_horizontal"
             android:scaleType="fitXY"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo512" />
 
         <TextView
             android:id="@+id/appName"
