fix remember me

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/backgroundLayout"
     android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".ForgotPasswordActivity">
 
 
     <TextView
@@ -17,7 +17,8 @@
         android:paddingTop="@dimen/_16sdp"
         android:textAlignment="center"
         android:layout_gravity="center"
-        android:text="ایجاد حساب کاربری" />
+        android:fontFamily="@font/iran_sani"
+        android:text="تغییر رمز عبور" />
 
 
     <LinearLayout
@@ -31,15 +32,15 @@
 
 
         <!--<ImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--android:layout_marginEnd="8dp"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:scaleType="fitXY"-->
-            <!--android:src="@mipmap/login" />-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:scaleType="fitXY"-->
+        <!--android:src="@mipmap/login" />-->
 
         <EditText
             android:id="@+id/MobileNumberTxt"
@@ -50,23 +51,12 @@
             android:enabled="false"
             android:gravity="center"
             android:hint="شماره تلفن همراه"
+            android:fontFamily="@font/iran_sani"
             android:inputType="phone"
             android:paddingTop="@dimen/_16sdp"
             android:textColor="@color/colorText"
             android:textColorHint="@color/colorText2" />
 
-        <EditText
-            android:id="@+id/UserNameTxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_16sdp"
-            android:layout_marginRight="@dimen/_16sdp"
-            android:gravity="center"
-            android:hint="نام کاربری"
-            android:inputType="text"
-            android:paddingTop="@dimen/_16sdp"
-            android:textColor="@color/colorText"
-            android:textColorHint="@color/colorText2" />
 
         <EditText
             android:id="@+id/PasswordTxt"
@@ -75,6 +65,7 @@
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginRight="@dimen/_16sdp"
             android:gravity="center"
+            android:fontFamily="@font/iran_sani"
             android:hint="رمز عبور"
             android:inputType="textPassword"
             android:paddingTop="@dimen/_16sdp"
@@ -90,6 +81,7 @@
             android:gravity="center"
             android:hint="تکرار رمز عبور"
             android:inputType="textPassword"
+            android:fontFamily="@font/iran_sani"
             android:paddingTop="@dimen/_16sdp"
             android:textColor="@color/colorText"
             android:textColorHint="@color/colorText2" />
@@ -115,14 +107,6 @@
             app:indicatorName="BallClipRotateMultipleIndicator"
             />
 
-        <TextView
-            android:id="@+id/IHaveMeTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/_16sdp"
-            android:fontFamily="@font/iran_sani"
-            android:text="حساب کاربری دارید؟ وارد شوید."
-            android:visibility="visible" />
 
 
         <LinearLayout
