--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:maxLength="1"
                 android:maxLines="1"
                 android:text=""></EditText>
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:maxLength="1"
                 android:maxLines="1"
                 android:text=""></EditText>
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:maxLength="1"
                 android:maxLines="1"
                 android:text=""></EditText>
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:maxLength="1"
                 android:maxLines="1"
                 android:text=""></EditText>
