--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -6,13 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MapFragment">
 
-
     <fragment
+        class="ir.map.sdk_map.maps.SupportMapFragment"
         android:id="@+id/myMapView"
-        class="ir.map.sdk_map.wrapper.SupportMaptexFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity=""></fragment>
+        android:layout_height="match_parent">
+    </fragment>
 
 
     <android.support.design.widget.FloatingActionButton
