--- a/app/src/main/res/layout/ax_spinner_item.xml
+++ b/app/src/main/res/layout/ax_spinner_item.xml
@@ -8,4 +8,5 @@
     android:fontFamily="@font/iran_sani"
     android:padding="@dimen/_8sdp"
     android:singleLine="true"
+    android:text="سلام"
     android:textAlignment="inherit" />
