--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -59,12 +59,58 @@
                         android:gravity="right|center"
                         android:paddingRight="@dimen/_5sdp"
                         android:text="در دسترس بودن "
+                        android:textSize="@dimen/_12sdp"
                         android:textColor="@color/colorText" />
 
 
                     <Switch
                         android:id="@+id/switchNotAvailable"
                         android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:checked="true"
+                        android:fontFamily="@font/iran_sani"
+                        android:textColor="@color/colorText" />
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_55sdp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_55sdp"
+                    android:background="@color/colorWhite"
+                    android:layoutDirection="rtl"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_8sdp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/iran_sani"
+                        android:gravity="right|center"
+                        android:paddingRight="@dimen/_5sdp"
+                        android:text="روش جستجو همراه با اعلان در مقصد"
+                        android:textSize="@dimen/_12sdp"
+                        android:textColor="@color/colorText" />
+
+                    <ImageView
+                        android:id="@+id/img_help"
+                        android:layout_width="@dimen/_15sdp"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        android:src="@drawable/ic_help" />
+
+
+                    <Switch
+                        android:id="@+id/SearchTypeMethod"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:checked="true"
@@ -105,6 +151,7 @@
                         android:gravity="right|center"
                         android:paddingRight="@dimen/_5sdp"
                         android:text="حذف محدودیت ها و تبلیغات"
+                        android:textSize="@dimen/_12sdp"
                         android:textColor="@color/colorText" />
 
 
@@ -147,6 +194,7 @@
                         android:gravity="right|center"
                         android:paddingRight="@dimen/_5sdp"
                         android:text="خروج از حساب کاربری"
+                        android:textSize="@dimen/_12sdp"
                         android:textColor="@color/colorText" />
 
 
@@ -182,6 +230,7 @@
                         android:gravity="right|center"
                         android:paddingRight="@dimen/_5sdp"
                         android:text="پشتیبانی"
+                        android:textSize="@dimen/_12sdp"
                         android:textColor="@color/colorText" />
 
 
@@ -227,6 +276,7 @@
                         android:gravity="right|center"
                         android:paddingRight="@dimen/_5sdp"
                         android:text="قوانین و شرایط استفاده"
+                        android:textSize="@dimen/_12sdp"
                         android:textColor="@color/colorText" />
 
                     <ImageView
@@ -270,6 +320,7 @@
                         android:gravity="right|center"
                         android:paddingRight="@dimen/_5sdp"
                         android:text="درباره ما"
+                        android:textSize="@dimen/_12sdp"
                         android:textColor="@color/colorText" />
 
 
